--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,6 @@ body {
   color: #fff;
 }
 
-.resume {
-    background-color: rgba(150, 150, 150, 1);
-}
-
 
 /* Custom Button Styles */
 
@@ -94,21 +90,18 @@ hr.small {
   padding: 50px 0;
 
 }
-
-.tempura {
-    background: url(../img/tempura.jpg);
-}
-
 .img-about {
     padding-left: 0px;
     padding-right: 0px;
 }
 
 
+
 /* Resume */
 
 .resume {
   padding: 50px 0;
+  background-color: rgba(150, 150, 150, 1);
 }
 
 .resume-item {
@@ -120,19 +113,21 @@ hr.small {
 }
 
 
-/* Callout */
+/*Experience */
 
-.callout {
-  display: table;
-  width: 100%;
-  height: 400px;
-  color: #fff;
-  background: url(../img/callout.jpg) no-repeat center center scroll;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+
+.thumbnail {
+  padding:0;
+  border-radius:0;
+  border:none;
+  box-shadow:0 2px 5px 0 rgba(0,0,0,.16),0 2px 10px 0 rgba(0,0,0,.12);
 }
+
+.thumbnail p{
+  font-size: 15px;
+}
+
+
 
 
 /* Portfolio */
@@ -172,9 +167,6 @@ footer {
   padding: 25px 0;
 }
 
-#footer-content {
-    background: #000;
-}
 
 #to-top {
   font-size: 1em;
