trying to run on gunicorn

--- a/flask_website/static/css/index.css
+++ b/flask_website/static/css/index.css
@@ -2,12 +2,29 @@ body {
     font-family: "Courier New", Courier, monospace;
 }
 
+.display-3 {
+    font-family: Futura;
+    font-style: italic;
+    font-weight: bold;
+}
+
+header {
+    background-color: rgba(0, 0, 0, 0.78);
+}
+
+.head-jumbo {
+    /*background-color: rgba(0, 0, 0, 0.78);*/
+    color: #FFF;
+}
+
 .top-link {
-    color: rgba(0, 0, 0, 0.7);
+    color: #FFF;
 }
 
 .top-link:hover, .top-link:active {
-    color: rgba(255, 0, 0, 0.7);
+    background-color: rgba(255, 0, 0, 0.9);
+    color: #FFF;
+    text-decoration: none;
 }
 
 .icons {
