--- a/flask_website/templates/findmyicecream.html
+++ b/flask_website/templates/findmyicecream.html
@@ -49,7 +49,7 @@
         <!--Footer-->
         <footer>
             <div id="footer-content">
-                <div class="col-md-4 text-right">
+                <div class="text-right">
                     <small>&copy; 2017, Taisei Klasen </small>
                 </div>
             </div>
