--- a/flask_website/templates/index.html
+++ b/flask_website/templates/index.html
@@ -27,26 +27,26 @@
 </head>
 <body>
     <!--header-->
-    <header class="header"></header>
-        <div class="jumbotron">
+    <header class="header">
+        <div class="jumbotron head-jumbo">
             <h1 class="display-3 text-center">Taisei Klasen</h1>
             <div class="col-lg-12 text-center">
                 <ul class="list-unstyled top-list">
                     <li>
                         <i class="fa fa-phone fa-fw"></i>
-                        <a href="tel:503-430-9550" class="top-link">(503) 430-9550</a>
+                        <a href="tel:503-430-9550" class="top-link"> (503) 430-9550 </a>
                     </li>
                     <li>
                         <i class="fa fa-envelope-o fa-fw"></i>
-                        <a href="mailto:taiseiklasen@gmail.com" class="top-link">taiseiklasen.com</a>
+                        <a href="mailto:taiseiklasen@gmail.com" class="top-link"> taiseiklasen.com </a>
                     </li>
                     <li>
                         <i class="fa fa-linkedin fa-fw"></i>
-                        <a href="https://linkedin.com/in/taisei" class="top-link">linkedin.com/in/taisei</a>
+                        <a href="https://linkedin.com/in/taisei" class="top-link"> linkedin.com/in/taisei </a>
                     </li>
                     <li>
                         <i class="fa fa-github fa-fw"></i>
-                        <a href="https://github.com/taiseiak" class="top-link">github.com/taiseiak</a>
+                        <a href="https://github.com/taiseiak" class="top-link"> github.com/taiseiak </a>
                     </li>
                 </ul>
             </div>
@@ -124,13 +124,13 @@
                     <h5><i>June 2017 - September 2017</i></h5>
                     <ul class="list-unstyled">
                         <li>
-                            Programmed the Python implementation of the Oregon Abstract Data Types package
+                           • Programmed the Python implementation of the Oregon Abstract Data Types package
                         </li>
                         <li>
-                            Implemented data structures in Python such as ordered sets and stacks
+                           • Implemented data structures in Python such as ordered sets and stacks
                         </li>
                         <li>
-                            Intended to be used in classes at University of Oregon by students who are proficient in C
+                           • Intended to be used in classes at University of Oregon by students who are proficient in C
                         </li>
 
                     </ul>
